add default room name-id pairs for easier (troll)ing

--- a/app/client/styles/company.less
+++ b/app/client/styles/company.less
@@ -86,7 +86,7 @@
     text-align: center;
     cursor: pointer;
     min-height: 155px;
-    
+
     &.custom {
       color: #060;
     }
@@ -108,7 +108,7 @@
       float: left;
       margin-right: 10px;
       border-radius: 5px;
-      
+
       img {
         width: 100px;
         height: 100px;
@@ -151,16 +151,20 @@
         margin-bottom: 5px;
       }
     }
-    
+
     .character-actions {
       margin-top: 10px;
       padding-right: 10px;
       text-align: right;
       color: #999;
-      
+
       a {
         color: #333;
       }
+    }
+
+    .favorite-label {
+      color: #fff;
     }
   }
 
@@ -169,13 +173,13 @@
       float: left;
       margin-right: 10px;
       border-radius: 5px;
-      
+
       img {
         width: 100px;
         height: 100px;
       }
     }
-    
+
     .character-details {
       margin-left: 120px;
       padding: 10px;
